--- a/style.css
+++ b/style.css
@@ -1,3 +1,17 @@
 ul {
   list-style-type: none;
 }
+
+li {
+  padding-top: 1rem;
+  padding-bottom: 1rem;
+
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 1.8rem;
+  text-decoration: underline;
+}
+
+li:hover {
+  font-size: 2.5rem;
+  color: blue;
+}
